--- a/package.json
+++ b/package.json
@@ -44,5 +44,14 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 6.0.8.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://lb00@bitbucket.org/lb00/spotify-timemachine.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "homepage": "https://bitbucket.org/lb00/spotify-timemachine#readme"
 }
