--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ng-select/ng-select": "^2.5.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.2",
+    "ngx-moment": "^3.1.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
