--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hammerjs": "^2.0.8",
     "moment": "^2.22.2",
     "ngx-moment": "^3.1.0",
+    "ngx-page-scroll": "^5.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
